--- a/tests/lighttpd.conf
+++ b/tests/lighttpd.conf
@@ -167,8 +167,6 @@ $HTTP["host"] =~ "allow\.example\.org$" {
 }
 
 $HTTP["host"] == "cgi.example.org" {
-	index-file.names = ( "nonexistent.txt", "index.pl" )
-        server.error-handler-404 = "/indexfile/index.pl"
 	cgi.x-sendfile = "enable"
 }
 
@@ -179,7 +177,7 @@ $HTTP["host"] == "errors.example.org" {
 	else $HTTP["url"] =~ "^/dynamic/redirect_status/" {
 		server.error-handler     = "/404.pl"
 	}
-	else $HTTP["url"] =~ "." {
+	else {
 		server.error-handler-404 = "/404.pl"
 	}
 }
