--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ test_keyvalue
 test_configfile
 test_mod_access
 test_mod_evhost
+test_mod_indexfile
 test_mod_simple_vhost
 test_mod_staticfile
 test_mod_userdir
