--- a/tests/docroot/Makefile.am
+++ b/tests/docroot/Makefile.am
@@ -1,2 +1,12 @@
-SUBDIRS=www
 GNUMAKEFLAGS=--no-print-directory -s
+EXTRA_DIST=\
+	404.html \
+	404.pl \
+	cgi.pl \
+	exec-date.shtml \
+	index.html \
+	index.txt \
+	prefix.fcgi \
+	ssi-include.shtml \
+	ssi-include.txt \
+	ssi.shtml
