[core] periodically malloc_trim() to release mem (fixes #3084)
x-ref:
  "Memory fragmentation with HTTP/2 enabled"
  https://redmine.lighttpd.net/issues/3084

--- a/src/meson.build
+++ b/src/meson.build
@@ -125,6 +125,7 @@ conf_data.set('HAVE_KQUEUE', compiler.has_function('kqueue', args: defs))
 conf_data.set('HAVE_LOCALTIME_R', compiler.has_function('localtime_r', args: defs))
 conf_data.set('HAVE_LSTAT', compiler.has_function('lstat', args: defs))
 conf_data.set('HAVE_MADVISE', compiler.has_function('madvise', args: defs))
+conf_data.set('HAVE_MALLOC_TRIM', compiler.has_function('malloc_trim', args: defs))
 conf_data.set('HAVE_MALLOPT', compiler.has_function('mallopt', args: defs))
 conf_data.set('HAVE_MEMCPY', compiler.has_function('memcpy', args: defs))
 conf_data.set('HAVE_MEMPCPY', compiler.has_function('mempcpy', args: defs))
