--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -173,6 +173,7 @@ check_function_exists(kqueue HAVE_KQUEUE)
 check_function_exists(localtime_r HAVE_LOCALTIME_R)
 check_function_exists(lstat HAVE_LSTAT)
 check_function_exists(madvise HAVE_MADVISE)
+check_function_exists(malloc_trim HAVE_MALLOC_TRIM)
 check_function_exists(mallopt HAVE_MALLOPT)
 check_function_exists(memcpy HAVE_MEMCPY)
 check_function_exists(mempcpy HAVE_MEMPCPY)
