[build] propagate HAVE_DLFCN_H in builds

--- a/src/meson.build
+++ b/src/meson.build
@@ -46,6 +46,7 @@ conf_data.set('HAVE_SYS_WAIT_H', compiler.has_header('sys/wait.h'))
 conf_data.set('HAVE_SYS_TIME_H', compiler.has_header('sys/time.h'))
 conf_data.set('HAVE_UNISTD_H', compiler.has_header('unistd.h'))
 conf_data.set('HAVE_PTHREAD_H', compiler.has_header('pthread.h'))
+conf_data.set('HAVE_DLFCN_H', compiler.has_header('dlfcn.h'))
 conf_data.set('HAVE_GETOPT_H', compiler.has_header('getopt.h'))
 conf_data.set('HAVE_INTTYPES_H', compiler.has_header('inttypes.h'))
 conf_data.set('HAVE_MALLOC_H', compiler.has_header('malloc.h'))
