--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -144,6 +144,9 @@ check_function_exists(crypt HAVE_CRYPT)
 set(CMAKE_EXTRA_INCLUDE_FILES sys/socket.h)
 check_type_size(socklen_t HAVE_SOCKLEN_T)
 set(CMAKE_EXTRA_INCLUDE_FILES)
+if(WIN32)
+set(HAVE_SOCKLEN_T 1)
+endif()
 
 check_include_files(malloc.h HAVE_MALLOC_H)
 if(HAVE_MALLOC_H)
@@ -271,6 +274,9 @@ check_c_source_compiles("
 		struct sockaddr_in6 s; struct in6_addr t=in6addr_any; int i=AF_INET6; s; t.s6_addr[0] = 0;
 		return 0;
 	}" HAVE_IPV6)
+if(WIN32)
+set(HAVE_IPV6 1)
+endif()
 if(CMAKE_SYSTEM_NAME MATCHES "SunOS")
 set(CMAKE_REQUIRED_LIBRARIES)
 endif()
@@ -1109,7 +1115,7 @@ if(CMAKE_C_COMPILER_ID MATCHES "GNU" OR CMAKE_C_COMPILER_ID MATCHES "Clang")
 	set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_WITHDEBINFO} -O2")
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${WARN_LDFLAGS}")
 	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${WARN_LDFLAGS}")
-	if((NOT APPLE) AND (NOT CMAKE_SYSTEM_NAME MATCHES "SunOS"))
+	if(NOT APPLE AND NOT WIN32 AND NOT CMAKE_SYSTEM_NAME MATCHES "SunOS")
 		add_target_properties(lighttpd LINK_FLAGS "-Wl,-export-dynamic")
 	endif()
 endif()
