--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -89,6 +89,7 @@ common_src=base64.c buffer.c burl.c log.c \
 	rand.c \
 	request.c \
 	sock_addr.c \
+	fdlog.c \
 	ck.c
 
 src = server.c response.c connections.c h2.c reqpool.c \
@@ -474,6 +475,7 @@ hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
 	first.h http_chunk.h \
 	algo_hmac.h \
 	algo_md.h algo_md5.h algo_sha1.h algo_splaytree.h algo_xxhash.h \
+	fdlog.h \
 	ck.h \
 	http_cgi.h http_date.h \
 	http_header.h http_range.h \
