[multiple] de-dup file and piped loggers (fixes #3101)
de-dup file and piped loggers for error logs and access logs

x-ref:
  "RFE: de-dup file and piped loggers"
  https://redmine.lighttpd.net/issues/3101

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -768,6 +768,7 @@ set(COMMON_SRC
 	request.c
 	sock_addr.c
 	rand.c
+	fdlog_maint.c
 	fdlog.c
 	ck.c
 )
@@ -887,6 +888,7 @@ add_executable(test_configfile
 	http_kv.c
 	vector.c
 	log.c
+	fdlog.c
 	sock_addr.c
 	ck.c
 )
@@ -899,6 +901,7 @@ add_executable(test_keyvalue
 	base64.c
 	array.c
 	log.c
+	fdlog.c
 	ck.c
 )
 add_test(NAME test_keyvalue COMMAND test_keyvalue)
@@ -908,6 +911,7 @@ add_executable(test_mod_access
 	buffer.c
 	array.c
 	log.c
+	fdlog.c
 	ck.c
 )
 add_test(NAME test_mod_access COMMAND test_mod_access)
@@ -917,6 +921,7 @@ add_executable(test_mod_evhost
 	buffer.c
 	array.c
 	log.c
+	fdlog.c
 	ck.c
 )
 add_test(NAME test_mod_evhost COMMAND test_mod_evhost)
@@ -933,6 +938,7 @@ add_executable(test_mod_indexfile
 	http_header.c
 	http_kv.c
 	log.c
+	fdlog.c
 	sock_addr.c
 	stat_cache.c
 	algo_splaytree.c
@@ -945,6 +951,7 @@ add_executable(test_mod_simple_vhost
 	buffer.c
 	array.c
 	log.c
+	fdlog.c
 	ck.c
 )
 add_test(NAME test_mod_simple_vhost COMMAND test_mod_simple_vhost)
@@ -966,6 +973,7 @@ add_executable(test_mod_staticfile
 	http_header.c
 	http_kv.c
 	log.c
+	fdlog.c
 	sock_addr.c
 	stat_cache.c
 	algo_splaytree.c
@@ -978,6 +986,7 @@ add_executable(test_mod_userdir
 	buffer.c
 	array.c
 	log.c
+	fdlog.c
 	ck.c
 )
 add_test(NAME test_mod_userdir COMMAND test_mod_userdir)
@@ -991,6 +1000,7 @@ add_executable(test_request
 	http_header.c
 	http_kv.c
 	log.c
+	fdlog.c
 	sock_addr.c
 	ck.c
 )
