--- a/src/meson.build
+++ b/src/meson.build
@@ -730,6 +730,7 @@ common_src = [
 	'fdevent_solaris_devpoll.c',
 	'fdevent_solaris_port.c',
 	'fdevent.c',
+	'fdlog_maint.c',
 	'fdlog.c',
 	'gw_backend.c',
 	'http_cgi.c',
@@ -898,6 +899,7 @@ test('test_configfile', executable('test_configfile',
 		'http_kv.c',
 		'vector.c',
 		'log.c',
+		'fdlog.c',
 		'sock_addr.c',
 		'ck.c',
 	],
@@ -917,6 +919,7 @@ test('test_keyvalue', executable('test_keyvalue',
 		'base64.c',
 		'array.c',
 		'log.c',
+		'fdlog.c',
 		'ck.c',
 	],
 	dependencies: common_flags + libpcre + libunwind,
@@ -929,6 +932,7 @@ test('test_mod_access', executable('test_mod_access',
 		'buffer.c',
 		'array.c',
 		'log.c',
+		'fdlog.c',
 		'ck.c',
 	],
 	dependencies: common_flags + libunwind,
@@ -941,6 +945,7 @@ test('test_mod_evhost', executable('test_mod_evhost',
 		'buffer.c',
 		'array.c',
 		'log.c',
+		'fdlog.c',
 		'ck.c',
 	],
 	dependencies: common_flags + libunwind,
@@ -960,6 +965,7 @@ test('test_mod_indexfile', executable('test_mod_indexfile',
 		'http_header.c',
 		'http_kv.c',
 		'log.c',
+		'fdlog.c',
 		'sock_addr.c',
 		'stat_cache.c',
 		'algo_splaytree.c',
@@ -980,6 +986,7 @@ test('test_mod_simple_vhost', executable('test_mod_simple_vhost',
 		'buffer.c',
 		'array.c',
 		'log.c',
+		'fdlog.c',
 		'ck.c',
 	],
 	dependencies: common_flags + libunwind,
@@ -1004,6 +1011,7 @@ test('test_mod_staticfile', executable('test_mod_staticfile',
 		'http_header.c',
 		'http_kv.c',
 		'log.c',
+		'fdlog.c',
 		'sock_addr.c',
 		'stat_cache.c',
 		'algo_splaytree.c',
@@ -1024,6 +1032,7 @@ test('test_mod_userdir', executable('test_mod_userdir',
 		'buffer.c',
 		'array.c',
 		'log.c',
+		'fdlog.c',
 		'ck.c',
 	],
 	dependencies: common_flags + libunwind,
@@ -1040,6 +1049,7 @@ test('test_request', executable('test_request',
 		'http_header.c',
 		'http_kv.c',
 		'log.c',
+		'fdlog.c',
 		'sock_addr.c',
 		'ck.c',
 	],
