[doc] update config files
github: closes #108

--- a/doc/config/lighttpd.conf
+++ b/doc/config/lighttpd.conf
@@ -75,7 +75,7 @@ var.socket_dir  = home_dir + "/sockets"
 #######################################################################
 ##
 ## Load the modules.
-include "modules.conf"
+include conf_dir + "/modules.conf"
 
 ##
 #######################################################################
@@ -155,13 +155,13 @@ server.errorlog             = log_root + "/error.log"
 ##
 ## Access log config
 ## 
-include "conf.d/access_log.conf"
+include conf_dir + "/conf.d/access_log.conf"
 
 ##
 ## The debug options are moved into their own file.
 ## see conf.d/debug.conf for various options for request debugging.
 ##
-include "conf.d/debug.conf"
+include conf_dir + "/conf.d/debug.conf"
 
 ##
 #######################################################################
@@ -393,12 +393,12 @@ static-file.exclude-extensions = ( ".php", ".pl", ".fcgi", ".scgi" )
 ##
 ## mimetype mapping
 ##
-include "conf.d/mime.conf"
+include conf_dir + "/conf.d/mime.conf"
 
 ##
 ## directory listing configuration
 ##
-include "conf.d/dirlisting.conf"
+include conf_dir + "/conf.d/dirlisting.conf"
 
 ##
 ## Should lighttpd follow symlinks?
@@ -478,7 +478,7 @@ include "conf.d/dirlisting.conf"
 ##
 ## custom includes like vhosts.
 ##
-#include "conf.d/config.conf"
-#include "/etc/lighttpd/vhosts.d/*.conf"
+#include conf_dir + "/conf.d/config.conf"
+#include conf_dir + "/vhosts.d/*.conf"
 ##
 #######################################################################
