--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -178,6 +178,7 @@ check_function_exists(mallopt HAVE_MALLOPT)
 check_function_exists(memcpy HAVE_MEMCPY)
 check_function_exists(mempcpy HAVE_MEMPCPY)
 check_function_exists(memset HAVE_MEMSET)
+check_function_exists(mkostemp HAVE_MKOSTEMP)
 check_function_exists(mmap HAVE_MMAP)
 check_function_exists(pathconf HAVE_PATHCONF)
 check_function_exists(pipe2 HAVE_PIPE2)
