--- a/src/meson.build
+++ b/src/meson.build
@@ -131,6 +131,7 @@ conf_data.set('HAVE_MALLOPT', compiler.has_function('mallopt', args: defs))
 conf_data.set('HAVE_MEMCPY', compiler.has_function('memcpy', args: defs))
 conf_data.set('HAVE_MEMPCPY', compiler.has_function('mempcpy', args: defs))
 conf_data.set('HAVE_MEMSET', compiler.has_function('memset', args: defs))
+conf_data.set('HAVE_MKOSTEMP', compiler.has_function('mkostemp', args: defs))
 conf_data.set('HAVE_MMAP', compiler.has_function('mmap', args: defs))
 conf_data.set('HAVE_PATHCONF', compiler.has_function('pathconf', args: defs))
 conf_data.set('HAVE_PIPE2', compiler.has_function('pipe2', args: defs))
