--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -186,6 +186,7 @@ check_function_exists(poll HAVE_POLL)
 check_function_exists(port_create HAVE_PORT_CREATE)
 check_function_exists(prctl HAVE_PRCTL)
 check_function_exists(pread HAVE_PREAD)
+check_function_exists(pwrite HAVE_PWRITE)
 check_function_exists(posix_fadvise HAVE_POSIX_FADVISE)
 check_function_exists(select HAVE_SELECT)
 check_function_exists(sendfile HAVE_SENDFILE)
@@ -195,6 +196,7 @@ check_function_exists(sendfilev HAVE_SENDFILEV)
 check_function_exists(sigaction HAVE_SIGACTION)
 check_function_exists(signal HAVE_SIGNAL)
 check_function_exists(sigtimedwait HAVE_SIGTIMEDWAIT)
+check_function_exists(splice HAVE_SPLICE)
 check_function_exists(srandom HAVE_SRANDOM)
 check_function_exists(strerror_r HAVE_STRERROR_R)
 check_function_exists(strptime HAVE_STRPTIME)
