--- a/src/meson.build
+++ b/src/meson.build
@@ -137,9 +137,10 @@ conf_data.set('HAVE_PATHCONF', compiler.has_function('pathconf', args: defs))
 conf_data.set('HAVE_PIPE2', compiler.has_function('pipe2', args: defs))
 conf_data.set('HAVE_POLL', compiler.has_function('poll', args: defs))
 conf_data.set('HAVE_PORT_CREATE', compiler.has_function('port_create', args: defs))
+conf_data.set('HAVE_POSIX_FADVISE', compiler.has_function('posix_fadvise', args: defs))
 conf_data.set('HAVE_PRCTL', compiler.has_function('prctl', args: defs))
 conf_data.set('HAVE_PREAD', compiler.has_function('pread', args: defs))
-conf_data.set('HAVE_POSIX_FADVISE', compiler.has_function('posix_fadvise', args: defs))
+conf_data.set('HAVE_PWRITE', compiler.has_function('pwrite', args: defs))
 conf_data.set('HAVE_SELECT', compiler.has_function('select', args: defs))
 conf_data.set('HAVE_SENDFILE', compiler.has_function('sendfile', args: defs))
 conf_data.set('HAVE_SEND_FILE', compiler.has_function('send_file', args: defs))
@@ -148,6 +149,7 @@ conf_data.set('HAVE_SENDFILEV', compiler.has_function('sendfilev', args: defs))
 conf_data.set('HAVE_SIGACTION', compiler.has_function('sigaction', args: defs))
 conf_data.set('HAVE_SIGNAL', compiler.has_function('signal', args: defs))
 conf_data.set('HAVE_SIGTIMEDWAIT', compiler.has_function('sigtimedwait', args: defs))
+conf_data.set('HAVE_SPLICE', compiler.has_function('splice', args: defs))
 conf_data.set('HAVE_SRANDOM', compiler.has_function('srandom', args: defs))
 conf_data.set('HAVE_STRERROR_R', compiler.has_function('strerror_r', args: defs))
 conf_data.set('HAVE_STRPTIME', compiler.has_function('strptime', args: defs))
