--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -321,7 +321,7 @@ if(WITH_OPENSSL)
 		set(CMAKE_REQUIRED_INCLUDES)
 	endif()
 	if(HAVE_OPENSSL_SSL_H)
-		check_library_exists(crypto BIO_f_base64 "" HAVE_LIBCRYPTO)
+		check_library_exists(crypto RAND_bytes "" HAVE_LIBCRYPTO)
 		if(HAVE_LIBCRYPTO)
 			set(CRYPTO_LIBRARY crypto)
 			check_library_exists(ssl SSL_new "" HAVE_LIBSSL)
