--- a/src/meson.build
+++ b/src/meson.build
@@ -140,7 +140,9 @@ conf_data.set('HAVE_PORT_CREATE', compiler.has_function('port_create', args: def
 conf_data.set('HAVE_POSIX_FADVISE', compiler.has_function('posix_fadvise', args: defs))
 conf_data.set('HAVE_PRCTL', compiler.has_function('prctl', args: defs))
 conf_data.set('HAVE_PREAD', compiler.has_function('pread', args: defs))
+conf_data.set('HAVE_PREADV', compiler.has_function('preadv', args: defs))
 conf_data.set('HAVE_PWRITE', compiler.has_function('pwrite', args: defs))
+conf_data.set('HAVE_PWRITEV', compiler.has_function('pwritev', args: defs))
 conf_data.set('HAVE_SELECT', compiler.has_function('select', args: defs))
 conf_data.set('HAVE_SENDFILE', compiler.has_function('sendfile', args: defs))
 conf_data.set('HAVE_SEND_FILE', compiler.has_function('send_file', args: defs))
