--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -186,7 +186,9 @@ check_function_exists(poll HAVE_POLL)
 check_function_exists(port_create HAVE_PORT_CREATE)
 check_function_exists(prctl HAVE_PRCTL)
 check_function_exists(pread HAVE_PREAD)
+check_function_exists(preadv HAVE_PREADV)
 check_function_exists(pwrite HAVE_PWRITE)
+check_function_exists(pwritev HAVE_PWRITEV)
 check_function_exists(posix_fadvise HAVE_POSIX_FADVISE)
 check_function_exists(select HAVE_SELECT)
 check_function_exists(sendfile HAVE_SENDFILE)
