--- a/src/meson.build
+++ b/src/meson.build
@@ -998,6 +998,39 @@ test('test_mod_simple_vhost', executable('test_mod_simple_vhost',
 	build_by_default: false,
 ))
 
+test('test_mod_ssi', executable('test_mod_ssi',
+	sources: [
+		't/test_mod_ssi.c',
+		'request.c',
+		'base64.c',
+		'buffer.c',
+		'burl.c',
+		'array.c',
+		'chunk.c',
+		'fdevent.c',
+		'http-header-glue.c',
+		'http_cgi.c',
+		'http_chunk.c',
+		'http_date.c',
+		'http_etag.c',
+		'http_header.c',
+		'http_kv.c',
+		'log.c',
+		'fdlog.c',
+		'sock_addr.c',
+		'stat_cache.c',
+		'algo_splaytree.c',
+		'ck.c'
+	],
+	dependencies: [ common_flags
+		, libfam
+		, libpcre
+		, libunwind
+		, libws2_32
+	],
+	build_by_default: false,
+))
+
 test('test_mod_staticfile', executable('test_mod_staticfile',
 	sources: [
 		't/test_mod_staticfile.c',
