--- a/src/SConscript
+++ b/src/SConscript
@@ -60,10 +60,6 @@ common_src = Split("base64.c buffer.c burl.c log.c \
 	http_chunk.c fdevent.c gw_backend.c \
 	stat_cache.c plugin.c http_etag.c array.c \
 	algo_md5.c algo_sha1.c algo_splaytree.c \
-	fdevent_select.c fdevent_libev.c \
-	fdevent_poll.c fdevent_linux_sysepoll.c \
-	fdevent_solaris_devpoll.c fdevent_solaris_port.c \
-	fdevent_freebsd_kqueue.c \
 	configfile-glue.c \
 	http-header-glue.c \
 	http_cgi.c \
@@ -80,6 +76,11 @@ src = Split("server.c response.c connections.c h2.c reqpool.c \
 	sock_addr_cache.c \
 	ls-hpack/lshpack.c \
 	algo_xxhash.c \
+	fdevent_impl.c \
+	fdevent_select.c fdevent_libev.c \
+	fdevent_poll.c fdevent_linux_sysepoll.c \
+	fdevent_solaris_devpoll.c fdevent_solaris_port.c \
+	fdevent_freebsd_kqueue.c \
 	http_range.c \
 	network.c \
 	network_write.c \
