--- a/src/meson.build
+++ b/src/meson.build
@@ -728,6 +728,7 @@ common_src = [
 	'configfile-glue.c',
 	'http_etag.c',
 	'fdevent.c',
+	'fdevent_fdnode.c',
 	'fdlog_maint.c',
 	'fdlog.c',
 	'gw_backend.c',
@@ -967,6 +968,7 @@ test('test_mod_indexfile', executable('test_mod_indexfile',
 		'fdlog.c',
 		'sock_addr.c',
 		'stat_cache.c',
+		'fdevent_fdnode.c',
 		'algo_splaytree.c',
 		'ck.c'
 	],
@@ -1013,6 +1015,7 @@ test('test_mod_ssi', executable('test_mod_ssi',
 		'fdlog.c',
 		'sock_addr.c',
 		'stat_cache.c',
+		'fdevent_fdnode.c',
 		'algo_splaytree.c',
 		'ck.c'
 	],
@@ -1046,6 +1049,7 @@ test('test_mod_staticfile', executable('test_mod_staticfile',
 		'fdlog.c',
 		'sock_addr.c',
 		'stat_cache.c',
+		'fdevent_fdnode.c',
 		'algo_splaytree.c',
 		'ck.c'
 	],
