--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1170,7 +1170,7 @@ endif()
 
 if(HAVE_LIBFAM)
 	target_link_libraries(lighttpd fam)
-	target_link_libraries(test_mod_ssi fam)
+	#target_link_libraries(test_mod_ssi fam)
 	target_link_libraries(test_mod_staticfile fam)
 endif()
 
@@ -1294,8 +1294,8 @@ if(WITH_LIBUNWIND)
 	add_target_properties(test_mod_indexfile COMPILE_FLAGS ${LIBUNWIND_CFLAGS})
 	target_link_libraries(test_mod_simple_vhost ${LIBUNWIND_LDFLAGS})
 	add_target_properties(test_mod_simple_vhost COMPILE_FLAGS ${LIBUNWIND_CFLAGS})
-	target_link_libraries(test_mod_ssi ${LIBUNWIND_LDFLAGS})
-	add_target_properties(test_mod_ssi COMPILE_FLAGS ${LIBUNWIND_CFLAGS})
+	#target_link_libraries(test_mod_ssi ${LIBUNWIND_LDFLAGS})
+	#add_target_properties(test_mod_ssi COMPILE_FLAGS ${LIBUNWIND_CFLAGS})
 	target_link_libraries(test_mod_staticfile ${LIBUNWIND_LDFLAGS})
 	add_target_properties(test_mod_staticfile COMPILE_FLAGS ${LIBUNWIND_CFLAGS})
 	target_link_libraries(test_mod_userdir ${LIBUNWIND_LDFLAGS})
