[doc] improve sample configs
(commit msg edited by gstrauss)

--- a/doc/config/lighttpd.conf
+++ b/doc/config/lighttpd.conf
@@ -427,6 +427,7 @@ include conf_dir + "/conf.d/dirlisting.conf"
 ## To enable SSL for the whole server you have to provide a valid
 ## certificate and have to enable the SSL engine.::
 ##
+##   server.modules += ( "mod_openssl" )
 ##   ssl.engine = "enable"
 ##   ssl.pemfile = "/path/to/server.pem"
 ##
