--- a/doc/config/vhosts.d/vhosts.template
+++ b/doc/config/vhosts.d/vhosts.template
@@ -6,20 +6,20 @@
 ##
 $HTTP["host"] == "download.example.com" {
   var.server_name = "download.example.com"
-
   server.name = server_name
-  ## example how to include another config:
-  ## use trigger before download
-  ## 
-  # include "conf.d/trigger_b4_dl.conf"
+  server.document-root = vhosts_dir + "/web/" + server_name + "/htdocs"
 
-  server.document-root = vhosts_dir + "/example.com/download/htdocs"
+  ## TLS certificate per vhost
   ##
-  ## use a seperate access log file
-  ## Since lighttpd 1.4.56, server.errorlog can also be used in virtual hosts.
+  #ssl.pemfile = vhosts_dir + "/web/" + server_name + "/certs/fullchain.pem"
+  #ssl.privkey = vhosts_dir + "/web/" + server_name + "/certs/privkey.pem"
+  #ssl.stapling-file = vhosts_dir + "/web/" + server_name + "/certs/staple.der"
+
+  ## use separate access/error log files
+  ## (since lighttpd 1.4.56, server.errorlog can also be used in virtual hosts)
   ##
-  accesslog.filename          = log_root + "/" + server_name + "/access.log"
-  server.errorlog             = log_root + "/" + server_name + "/error.log"
+  #accesslog.filename          = log_root + "/" + server_name + "/access.log"
+  #server.errorlog             = log_root + "/" + server_name + "/error.log"
 }
 
 ##
