--- a/tests/docroot/Makefile.am
+++ b/tests/docroot/Makefile.am
@@ -3,10 +3,6 @@ EXTRA_DIST=\
 	404.html \
 	404.pl \
 	cgi.pl \
-	exec-date.shtml \
 	index.html \
 	index.txt \
-	prefix.fcgi \
-	ssi-include.shtml \
-	ssi-include.txt \
-	ssi.shtml
+	prefix.fcgi
