--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -838,7 +838,7 @@ add_and_install_library(mod_secdownload "mod_secdownload.c;algo_hmac.c")
 add_and_install_library(mod_setenv mod_setenv.c)
 add_and_install_library(mod_simple_vhost mod_simple_vhost.c)
 add_and_install_library(mod_sockproxy mod_sockproxy.c)
-add_and_install_library(mod_ssi "mod_ssi_expr.c;mod_ssi.c")
+add_and_install_library(mod_ssi mod_ssi.c)
 add_and_install_library(mod_staticfile mod_staticfile.c)
 add_and_install_library(mod_status mod_status.c)
 add_and_install_library(mod_uploadprogress mod_uploadprogress.c)
