--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -911,6 +911,7 @@ add_executable(test_mod
 	${COMMON_SRC}
 	t/test_mod.c
 	t/test_mod_access.c
+	t/test_mod_alias.c
 	t/test_mod_evhost.c
 	t/test_mod_indexfile.c
 	t/test_mod_simple_vhost.c
