--- a/src/meson.build
+++ b/src/meson.build
@@ -926,6 +926,7 @@ test('test_mod', executable('test_mod',
 		common_src,
 		't/test_mod.c',
 		't/test_mod_access.c',
+		't/test_mod_alias.c',
 		't/test_mod_evhost.c',
 		't/test_mod_indexfile.c',
 		't/test_mod_simple_vhost.c',
