[tests] t/test_mod_evasive.c

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -912,6 +912,7 @@ add_executable(test_mod
 	t/test_mod.c
 	t/test_mod_access.c
 	t/test_mod_alias.c
+	t/test_mod_evasive.c
 	t/test_mod_evhost.c
 	t/test_mod_indexfile.c
 	t/test_mod_simple_vhost.c
