--- a/src/meson.build
+++ b/src/meson.build
@@ -927,6 +927,7 @@ test('test_mod', executable('test_mod',
 		't/test_mod.c',
 		't/test_mod_access.c',
 		't/test_mod_alias.c',
+		't/test_mod_evasive.c',
 		't/test_mod_evhost.c',
 		't/test_mod_indexfile.c',
 		't/test_mod_simple_vhost.c',
